--- a/pom.xml
+++ b/pom.xml
@@ -32,10 +32,17 @@
             <version>2.3.2.RELEASE</version>
         </dependency>
 
+<!--        activemq broker需要-->
+<!--        <dependency>-->
+<!--            <groupId>com.fasterxml.jackson.core</groupId>-->
+<!--            <artifactId>jackson-databind</artifactId>-->
+<!--            <version>2.11.0</version>-->
+<!--        </dependency>-->
+
 <!--        activemq pool-->
         <dependency>
             <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-pool</artifactId>
+            <artifactId>activemq-all</artifactId>
             <version>5.16.0</version>
         </dependency>
 
