--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,8 @@ server:
   port: 7077
 
 spring:
+  application:
+    name: market
   activemq:
     broker-url: tcp://localhost:61616
     user: admin
